# skalog

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile
Logging/: ActiveObject.h  ColorStream.cpp  LogAsync.cpp  LogAsync.h  LogContext.h  LogEntry.cpp  LogEntry.h  LogSync.h  LogTarget.cpp  Logger.h  LoggerImpl.cpp  LoggerImpl.h  MultiLogger.h  Tokenizer.cpp  Tokenizer.h
Signal/: SignalHandler.cpp  SignalHandler.h  SignalHandlerUnix.cpp  SignalHandlerUnix.h  SignalHandlerWindows.cpp  SignalHandlerWindows.h  SignalInstaller.cpp  SignalInstaller.h
bench/: CMakeCache.txt  CMakeLists.txt  Makefile  skalog_bench
bench/src/: main.cpp
src/: CMakeLists.txt  Makefile
src/src/Logging/: ColorStream.cpp  ColorStream.h  LogAsync.cpp  LogAsync.h  LogContext.h  LogEntry.cpp  LogEntry.h  LogFilter.cpp  LogSync.cpp  LogSync.h  LogTarget.cpp  LogTarget.h  Logger.h  LoggerImpl.cpp  LoggerImpl.h  MultiLogger.h  PeriodicTracer.h  Token.h  TokenConsumeType.h  Tokenizer.cpp  Tokenizer.h
src/src/Signal/: SignalHandler.cpp  SignalHandler.h  SignalHandlerUnix.cpp  SignalHandlerUnix.h  SignalHandlerWindows.cpp  SignalHandlerWindows.h
test/: CMakeLists.txt  Makefile
test/src/: Logger_appliedOnClass_test.cpp  Logger_test.cpp  MultiLogger_appliedOnClass_test.cpp  MultiLogger_multiThreading_test.cpp  MultiLogger_test.cpp  Tokenizer_test.cpp  main.cpp
